headers = [
    'ExpandedResWindow.h',
    'SearchWindow.h',
    'DTW.h',
    'ManhattanDistance.h',
    'TimeSeries.h',
    'PartialWindowMatrix.h',
    'EuclideanDistance.h',
    'JavaTypes.h',
    'PAA.h',
    'FastDTW.h',
    'LinearWindow.h',
    'FDMath.h',
    'BinaryDistance.h',
    'WarpPath.h',
    'ColMajorCell.h',
    'CostMatrix.h',
    'TimeSeriesPoint.h',
    'TimeWarpInfo.h',
    'MemoryResidentMatrix.h',
    'meson.build',
    'FDAssert.h',
    'Foundation.h',
    'FullWindow.h'
]

install_headers(headers, subdir : 'fastdtw')
